fix blur transition between hero and testimonials on mobile devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,11 @@ section {
 }
 
 
+.main-wrapper {
+  background-color: var(--dark);
+  min-height: 100vh;
+}
+
 .placeholder {
   padding: 2rem;
   display: flex;
