--- a/components/Hero.css
+++ b/components/Hero.css
@@ -100,6 +100,20 @@
 }
 
 @media (max-width: 1000px) {
+  .hero {
+    margin-bottom: -1px;
+  }
+
+  .hero-bottom-fade {
+    display: block;
+    height: 80vh;
+    background: linear-gradient(to bottom, transparent 40%, rgba(15, 15, 15, 0.4) 60%, #0f0f0f 90%, #0f0f0f 100%);
+  }
+
+  .testimonials-top-fade {
+    display: none;
+  }
+
   .hero-header {
     flex-direction: column;
     padding: 3rem 1.5rem 8rem;
